--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
 
     <section class="banner">
-        <h1 class="banner-titulo ">parabéns você conseguiu ihhhhhhhhhh</h1>
+        <h1 class="banner-titulo ">Alugue tudo que você precisa de forma fácil e rápida.</h1>
         <div class="banner-img"><img src="img/banner-img.svg" alt=""></div>
     </section>
 
